modules/gdscript/tests/scripts/runtime/errors/use_return_value_of_void_native_method_call.gd
#debug-only: Runtime checks for using the result of a void method is disabled in release

func test():
	var obj
	obj = RefCounted.new()
	print(obj.notify_property_list_changed())
